--- a/assets/css/detalhes_global.css
+++ b/assets/css/detalhes_global.css
@@ -1,18 +1,15 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    color: white;
 }
 
-body {
-    background-color: #f6f8fc;
-
-}
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: none;
 }
 
 @media screen and (min-width: 992px) {
